# golang-gazelle-boilerplate

./: .bazelignore  BUILD.bazel  WORKSPACE  bazel-bin  bazel-bzl-test  bazel-out  bazel-testlogs  go.mod
dependency/: BUILD.bazel  dependencyone.go
other/: BUILD.bazel  main.go
